Add logic to do search request from reddit

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,12 @@
-<p>
-  search works!
-</p>
+<header>
+  <input type="text" [(ngModel)]="searchString" (ngModelChange)="inputChanged($event)" placeholder="Search">
+  <button (click)="searchString = ''">Clear</button>
+</header>
+
+<section *ngFor="let result of results$ | async">
+  <div *ngIf="result.data.thumbnail != 'default' && result.data.thumbnail != 'self'">
+    <a [href]="result.data.url">
+      <img [src]="result.data.thumbnail" alt="" />
+      </a>
+  </div>
+</section>
